# Horizon-Atlas

./: .gitignore  Cargo.toml  Dockerfile  README.md  atlas.example.toml  atlas.toml  compose.yaml  config-node2.toml  config.toml  player_positions.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: client.rs  cluster.rs  compression.rs  config.rs  crypto.rs  discovery.rs  encryption.rs  error.rs  errors.rs  game_server.rs  health.rs  lib.rs  main.rs  metrics.rs  persistence.rs  proxy.rs  regions.rs  routing.rs  server.rs  server_manager.rs  skim.rs  spatial.rs  state.rs  transfer.rs  transitions.rs  types.rs
