[package]
name = "Horizon-Atlas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["tokio", "http1", "ws"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
futures-util = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
toml = "0.8.13"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
dashmap = "5.5.3"
anyhow = "1.0.82"
thiserror = "1.0.59"
async-trait = "0.1.80"
bincode = "1.3.3"
lz4_flex = { version = "0.11.3", default-features = false, features = ["std"] }
ring = "0.17.8"
base64 = "0.22.1"
tower = "0.5.0"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
# etcd-rs = { version = "1.0.0-alpha.3" }  # Requires protobuf compiler
reqwest = { version = "0.12.4", features = ["json"] }
hickory-resolver = "0.24.0"
prometheus = { version = "0.13.4", features = ["process"] }
hyper = { version = "1.3.1", features = ["server", "http1", "http2"] }
parking_lot = "0.12.2"
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam-channel = "0.5.13"
once_cell = "1.19.0"